--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -36,7 +36,7 @@
             </Menu>
                 <Menu id="helpMenuBar" mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem id="aboutItem" mnemonicParsing="false" text="About" onAction="#handleOpenAbout"/>
+                        <MenuItem id="aboutItem" mnemonicParsing="false" onAction="#handleOpenAbout" text="About" />
                     </items>
                 </Menu>
             </menus>
@@ -63,6 +63,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -101,6 +102,9 @@
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
                 <Button fx:id="blackWhiteBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openBlackWhiteWindow" text="Black and White" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            </AnchorPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7">
+                <Button fx:id="sepiaBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openSepiaWindow" text="Sepia" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </AnchorPane>
          </children>
       </GridPane>
