--- a/src/main/resources/views/sepia_view.fxml
+++ b/src/main/resources/views/sepia_view.fxml
@@ -30,7 +30,7 @@
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-      <Button fx:id="sepiaBtn" mnemonicParsing="false" onAction="#sepia" text="Apply to Sepia &amp; White" GridPane.rowIndex="1">
+      <Button fx:id="sepiaBtn" mnemonicParsing="false" onAction="#sepia" text="Apply to Sepia" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="20.0" />
          </GridPane.margin>
