--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -27,13 +27,16 @@
                         </Menu>
                         <MenuItem id="fileSaveItem" mnemonicParsing="false" onAction="#saveActionForOpenFileController" text="Save" />
                         <MenuItem fx:id="openInformation" mnemonicParsing="false" onAction="#handleOpenFileInformation" text="Information" />
+                        <MenuItem mnemonicParsing="false" text="Clean Image " />
+                        <MenuItem mnemonicParsing="false" onAction="#showColorHistogram" text="Show Color Histogram" />
+                  <MenuItem mnemonicParsing="false" text="Show Grey Histogram" onAction="#showGreyHistogram"/>
                     </items>
                 </Menu>
-            <Menu mnemonicParsing="false" text="Edit">
-              <items>
-                  <MenuItem mnemonicParsing="false" onAction="#undoActionForOpenFileController" text="Undo" />
-              </items>
-            </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#undoActionForOpenFileController" text="Undo" />
+                    </items>
+                </Menu>
                 <Menu id="helpMenuBar" mnemonicParsing="false" text="Help">
                     <items>
                         <MenuItem id="aboutItem" mnemonicParsing="false" onAction="#handleOpenAbout" text="About" />
@@ -43,70 +46,70 @@
         </MenuBar>
     </top>
     <center>
-      <StackPane fx:id="stackPane" prefHeight="361.0" prefWidth="431.0">
-         <children>
-              <ImageView fx:id="imageView" fitHeight="330.0" fitWidth="265.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                      <Image url="/images/default_start_img.gif" />
-                  </image>
-              </ImageView>
-         </children>
-      </StackPane>
+        <StackPane fx:id="stackPane" prefHeight="361.0" prefWidth="431.0">
+            <children>
+                <ImageView fx:id="imageView" fitHeight="330.0" fitWidth="265.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="/images/default_start_img.gif" />
+                    </image>
+                </ImageView>
+            </children>
+        </StackPane>
 
     </center>
-   <left>
-      <GridPane prefHeight="375.0" prefWidth="169.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <Button fx:id="gammaBtn" disable="true" layoutX="21.0" layoutY="38.0" mnemonicParsing="false" onAction="#openGammaWindow" text="Gamma Correction" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <Button fx:id="negativeBtn" disable="true" layoutX="21.0" layoutY="36.0" mnemonicParsing="false" onAction="#openNegativeWindow" text="Negative" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-               <children>
-                  <Button fx:id="filteringBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#openFilteringWindow" text="Filtering" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-               <children>
-                  <Button fx:id="histogramBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#openHistogramWindow" prefWidth="86.0" text="Histogram Based Operations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
-               <children>
-                  <Button fx:id="geometricBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openGeometricWindow" text="Geometric Transformations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
-               <children>
-                  <Button fx:id="greyscaleBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openGreyscaleWindow" text="Greyscale" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
-                <Button fx:id="blackWhiteBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openBlackWhiteWindow" text="Black and White" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7">
-                <Button fx:id="sepiaBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openSepiaWindow" text="Sepia" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            </AnchorPane>
-         </children>
-      </GridPane>
-   </left>
+    <left>
+        <GridPane prefHeight="375.0" prefWidth="169.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <Button fx:id="gammaBtn" disable="true" layoutX="21.0" layoutY="38.0" mnemonicParsing="false" onAction="#openGammaWindow" text="Gamma Correction" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <children>
+                        <Button fx:id="negativeBtn" disable="true" layoutX="21.0" layoutY="36.0" mnemonicParsing="false" onAction="#openNegativeWindow" text="Negative" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                    <children>
+                        <Button fx:id="filteringBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#openFilteringWindow" text="Filtering" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                    <children>
+                        <Button fx:id="histogramBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" onAction="#openHistogramWindow" prefWidth="86.0" text="Histogram Based Operations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                    <children>
+                        <Button fx:id="geometricBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openGeometricWindow" text="Geometric Transformations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
+                    <children>
+                        <Button fx:id="greyscaleBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openGreyscaleWindow" text="Greyscale" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
+                    <Button fx:id="blackWhiteBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openBlackWhiteWindow" text="Black and White" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                </AnchorPane>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7">
+                    <Button fx:id="sepiaBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#openSepiaWindow" text="Sepia" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                </AnchorPane>
+            </children>
+        </GridPane>
+    </left>
 </BorderPane>
