--- a/src/main/resources/views/geometric_view.fxml
+++ b/src/main/resources/views/geometric_view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.controllers.GeometricController">
+<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.controllers.GeometricController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="728.0" minWidth="10.0" prefWidth="670.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="80.0" />
@@ -25,6 +25,8 @@
       <HBox alignment="CENTER" prefHeight="334.0" prefWidth="549.0">
          <children>
             <ImageView fx:id="imageViewGeometric" fitHeight="319.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true" />
+            <Button mnemonicParsing="false" text="-90°" onAction="#rotateLeft" />
+            <Button mnemonicParsing="false" text="+90°" onAction="#rotateRight"/>
          </children>
       </HBox>
       <AnchorPane prefHeight="66.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -62,7 +64,7 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForGeometricController" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" onAction="#undoActionForGeometricController" text="Revert" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="450.0" />
          </GridPane.margin>
