--- a/src/main/resources/views/geometric_view.fxml
+++ b/src/main/resources/views/geometric_view.fxml
@@ -12,10 +12,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.controllers.GeometricController">
+<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.controllers.GeometricController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="728.0" minWidth="10.0" prefWidth="670.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="80.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="728.0" minWidth="10.0" prefWidth="658.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="142.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="334.0" vgrow="SOMETIMES" />
@@ -25,19 +25,19 @@
       <HBox alignment="CENTER" prefHeight="334.0" prefWidth="549.0">
          <children>
             <ImageView fx:id="imageViewGeometric" fitHeight="319.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true" />
-            <Button mnemonicParsing="false" text="-90°" onAction="#rotateLeft" />
-            <Button mnemonicParsing="false" text="+90°" onAction="#rotateRight"/>
          </children>
       </HBox>
-      <AnchorPane prefHeight="66.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <AnchorPane prefHeight="66.0" prefWidth="119.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="21.0" mnemonicParsing="false" onAction="#saveActionForGeometricController" prefHeight="25.0" prefWidth="44.0" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
+            <Button layoutX="21.0" layoutY="21.0" mnemonicParsing="false" onAction="#saveActionForGeometricController" prefHeight="25.0" prefWidth="62.0" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="21.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
          <children>
-            <Slider fx:id="rotateSlider" blockIncrement="1.0" layoutY="48.0" max="90.0" min="-90.0" onMouseClicked="#rotate" orientation="VERTICAL" prefHeight="286.0" prefWidth="72.0" showTickLabels="true" showTickMarks="true" />
-            <Text layoutX="11.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rotation" wrappingWidth="49.13671910762787" />
+            <Slider fx:id="rotateSlider" blockIncrement="1.0" layoutX="14.0" layoutY="32.0" max="90.0" min="-90.0" onMouseClicked="#rotate" orientation="VERTICAL" prefHeight="264.0" prefWidth="72.0" showTickLabels="true" showTickMarks="true" />
+            <Text layoutX="14.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rotation" wrappingWidth="49.13671910762787" />
+            <Button layoutX="42.0" layoutY="306.0" mnemonicParsing="false" onAction="#rotateRight" text="+90°" />
+            <Button layoutX="1.0" layoutY="306.0" mnemonicParsing="false" onAction="#rotateLeft" text="-90°" />
          </children></AnchorPane>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Width" wrappingWidth="49.13671875" GridPane.rowIndex="1">
          <GridPane.margin>
