--- a/src/main/resources/views/sepia_view.fxml
+++ b/src/main/resources/views/sepia_view.fxml
@@ -26,7 +26,7 @@
       </HBox>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="21.0" mnemonicParsing="false" text="SAVE" onAction="#saveActionForSepiaController" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
+            <Button layoutY="21.0" mnemonicParsing="false" onAction="#saveActionForSepiaController" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
@@ -35,9 +35,9 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForSepiaController" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" onAction="#undoActionForSepiaController" text="Revert" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets left="180.0" />
+            <Insets left="130.0" />
          </GridPane.margin>
       </Button>
    </children>
