--- a/src/main/resources/views/filtering_view.fxml
+++ b/src/main/resources/views/filtering_view.fxml
@@ -38,7 +38,7 @@
             </children>
         </AnchorPane>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"/>
-        <MenuButton mnemonicParsing="false" text="Filter" GridPane.rowIndex="1">
+        <MenuButton mnemonicParsing="false" onMouseClicked="#setLastUnsavedImage" text="Filter" GridPane.rowIndex="1">
             <items>
                 <MenuItem mnemonicParsing="false" onAction="#sharpen" text="Sharpen filter"/>
                 <MenuItem mnemonicParsing="false" onAction="#setSigmaSliderVisible" text="Gaussian filter"/>
