--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -25,7 +25,7 @@
                                 <MenuItem fx:id="openFromURLItem" mnemonicParsing="false" onAction="#openUrlWindow" text="from URL" />
                             </items>
                         </Menu>
-                        <MenuItem id="fileSaveItem" mnemonicParsing="false" onAction="#saveActionForOpenFileController" text="Save" />
+                        <MenuItem fx:id="fileSaveItem" disable="true" mnemonicParsing="false" onAction="#saveActionForOpenFileController" text="Save" />
                         <MenuItem fx:id="openInformation" mnemonicParsing="false" onAction="#handleOpenFileInformation" text="Information" />
                         <MenuItem mnemonicParsing="false" text="Clean Image" onAction="#cleanImage" />
                         <MenuItem fx:id="colorHistogramItem" disable="true" mnemonicParsing="false" onAction="#showColorHistogram" text="Show Color Histogram" />
